<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project Mine</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LogOut</string>
    <string name="name">Fullname</string>
    <string name="spinner_title">Kategori</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    //kategori project
    <string-array name="kategori">
        <item>Party</item>
        <item>Wedding</item>
        <item>Software Development</item>
        <item>Construction</item>
        <item>Photography</item>
        <item>Out Door Activity</item>
        <item>Catering</item>
        <item>Hajj</item>
        <item>Umrah</item>
    </string-array>

    //datepicker
        <string name="action_settings">Settings</string>
        <string name="hello_world">Hello world!</string>
        <string name="date_label_set">Press the button to set the date</string>
        <string name="date_button_set">Set Date</string>
        <string name="date_view_set">The Date is: </string>
        <string name="date_selected"></string>

</resources>