<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:src="@mipmap/pm_hitam" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:background="@mipmap/splash1">
        <!-- Here you put the rest of your current view-->

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="#f5f5f5"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:weightSum="1">


            <TextView
                android:id="@+id/TextView01"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_weight=".14"
                android:background="#2980b9"
                android:gravity="center"
                android:text="Post your Project to Public Professional"
                android:textColor="#ffffff"></TextView>

            <EditText
                android:id="@+id/txtProjectName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:hint="Project Name"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <EditText
                android:id="@+id/txtDetailProject"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:background="@color/white"
                android:gravity="top"
                android:hint="Your Project Detail"
                android:inputType="text|textMultiLine"
                android:padding="10dp"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dip"
                android:text="Category:"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#2980b9" />

            <Spinner
                android:id="@+id/spinnerKategori"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:prompt="@string/spinner_title" />

            <EditText
                android:id="@+id/txtBudget"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:hint="Project Budget"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:padding="10dp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dip"
                android:text="Project Date:"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#2980b9" />

            //datepicker

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".14"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:background="#689f38"
                    android:onClick="setDate"
                    android:text="@string/date_button_set"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/button1"
                    android:layout_below="@+id/textView2"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:shadowColor="#34495e"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:text="@string/date_selected"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ff5a00"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight=".14"
                android:background="#ff5a00"
                android:text="Save New Project"
                android:textColor="#ffffff"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>


